<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="EcSoeRead_Param_typ" Id="{00f13569-38bb-025e-02ff-0c8bc721351c}">
    <Declaration><![CDATA[TYPE EcSoeRead_Param_typ :
	STRUCT
		sNetId          : T_AmsNetId; 
        nSlaveAddr      : UINT; 
        nSubIndex       : BYTE; 
        nIdn            : WORD;
        nElement        : BYTE;
        nDriveNo        : BYTE;
        bCommand        : BOOL;
        pDstBuf         : POINTER TO DWORD; 
        cbBufLen        : UDINT; 
        bExecute        : BOOL;
        tTimeout        : TIME := DEFAULT_ADS_TIMEOUT;
	END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>